--- a/package.json
+++ b/package.json
@@ -1,16 +1,38 @@
 {
-  "name": "calculator-app-main",
-  "version": "1.0.0",
-  "description": "![Design preview for the Calculator app coding challenge](./design/desktop-preview.jpg)",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lite" : "lite-server",
-    "start" : "npm run lite"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "house-listing",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "lite-server": "^2.6.1"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
