--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "date-fns": "^2.28.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-day-picker": "^8.0.7",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
